[gd_scene load_steps=8 format=3 uid="uid://bm71rws3mqrc3"]

[ext_resource type="Script" uid="uid://decj7maewu7v5" path="res://Level2/scripts/menu_title.gd" id="1_3ynn7"]
[ext_resource type="FontFile" uid="uid://81845xxeshc8" path="res://Level2/assets/fonts/KiriFont.ttf" id="1_uwit8"]
[ext_resource type="FontFile" uid="uid://cbn1vtwmn3rul" path="res://Level2/assets/fonts/FrancoisOne-Regular.ttf" id="2_3ynn7"]
[ext_resource type="Texture2D" uid="uid://c81md6lbkmjyx" path="res://Level2/assets/images/0003.png" id="2_whgbf"]
[ext_resource type="Texture2D" uid="uid://bekqrjqsvrop2" path="res://Level2/assets/images/controles.png" id="4_e8jpi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ynn7"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5cs2"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(0, 0, 0, 0)

[node name="MenuTitle" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3ynn7")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.792157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -29.0
offset_right = 2097.0
offset_bottom = 1162.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_whgbf")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1908.0
offset_bottom = 1004.0
color = Color(0.0117314, 0.244063, 0.195985, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 101.0
offset_right = 1426.0
offset_bottom = 397.0
theme_override_colors/font_color = Color(5.77569e-07, 0.484895, 0.336872, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 24
theme_override_constants/paragraph_spacing = 2
theme_override_constants/shadow_offset_x = 16
theme_override_constants/shadow_offset_y = 17
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 19
theme_override_fonts/font = ExtResource("1_uwit8")
theme_override_font_sizes/font_size = 134
text = "UNTAMED
SOULS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 575.0
offset_right = 1077.0
offset_bottom = 686.0
theme_override_colors/font_hover_pressed_color = Color(0, 0.793429, 7.70092e-07, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0.486275, 0.337255, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_3ynn7")
theme_override_font_sizes/font_size = 72
theme_override_styles/focus = SubResource("StyleBoxFlat_3ynn7")
text = "JOGAR"
flat = true

[node name="PopupControles" type="PopupPanel" parent="."]
size = Vector2i(1928, 1088)

[node name="TextureRect" type="TextureRect" parent="PopupControles"]
modulate = Color(1, 1, 1, 0.862745)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 1924.0
offset_bottom = 1084.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_e8jpi")

[node name="Label" type="Label" parent="PopupControles"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 1924.0
offset_bottom = 1084.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3ynn7")
theme_override_font_sizes/font_size = 60
text = "Pressione ESC para voltar"
horizontal_alignment = 1

[node name="Controls_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 791.0
offset_top = 682.0
offset_right = 1142.0
offset_bottom = 793.0
theme_override_colors/font_hover_pressed_color = Color(0, 0.793429, 7.70092e-07, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0.486275, 0.337255, 1)
theme_override_colors/font_color = Color(0, 0.486275, 0.337255, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_3ynn7")
theme_override_font_sizes/font_size = 72
theme_override_styles/focus = SubResource("StyleBoxFlat_e5cs2")
text = "CONTROLES"
flat = true

[node name="Leave_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 793.0
offset_right = 1077.0
offset_bottom = 904.0
theme_override_colors/font_hover_pressed_color = Color(0, 0.793429, 7.70092e-07, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0.486275, 0.337255, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_3ynn7")
theme_override_font_sizes/font_size = 72
theme_override_styles/focus = SubResource("StyleBoxFlat_e5cs2")
text = "SAIR"
flat = true

[connection signal="pressed" from="Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Controls_Button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Leave_Button" to="." method="_on_leave_button_pressed"]
